--- a/pom.xml
+++ b/pom.xml
@@ -188,6 +188,14 @@
 			<version>1.16</version>
 		</dependency>
 		<!-- mysql, mariadb log s 2022.02.26 -->
+		
+		<!-- for aop s 2022.03.08 -->
+		<dependency>
+			<groupId>org.aspectj</groupId>
+			<artifactId>aspectjweaver</artifactId>
+			<version>1.9.7</version>
+		</dependency>
+		<!-- for aop s 2022.03.08 -->
 
 	</dependencies>
     <build>
