--- a/pom.xml
+++ b/pom.xml
@@ -196,7 +196,27 @@
 			<version>1.9.7</version>
 		</dependency>
 		<!-- for aop s 2022.03.08 -->
-
+		
+		<!-- for ajax s 2022.03.12 -->
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-core</artifactId>
+			<version>2.13.0</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-annotations</artifactId>
+			<version>2.13.0</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.13.0</version>
+		</dependency>
+		<!-- for ajax s 2022.03.12 -->		
+		
 	</dependencies>
     <build>
         <plugins>
