--- a/pom.xml
+++ b/pom.xml
@@ -215,7 +215,15 @@
 			<artifactId>jackson-databind</artifactId>
 			<version>2.13.0</version>
 		</dependency>
-		<!-- for ajax s 2022.03.12 -->		
+		<!-- for ajax s 2022.03.12 -->	
+		
+		<!-- geocoder s 2022.03.22 -->	
+		<dependency>
+			<groupId>com.google.code.geocoder-java</groupId>
+			<artifactId>geocoder-java</artifactId>
+			<version>0.16</version>
+		</dependency>
+		<!-- geocoder 2 2022.03.22 -->			
 		
 	</dependencies>
     <build>
